@@ -140,9 +140,9 @@ g_iKeyMap [] = {
   /* 88 */	0,		0,		0,
   /* 89 */	0,		0,		0,
   /* 90 */	0,		0,		0,
-  /* 91 */	0,		0,		0,
-  /* 92 */	0,		0,		0,
-  /* 93 */	0,		0,		0,
+  /* 91 */	VK_LWIN,	KEY_LMeta,	0,
+  /* 92 */	VK_RWIN,	KEY_RMeta,	0,
+  /* 93 */	VK_APPS,	KEY_Menu,	0,
   /* 94 */	0,		0,		0,
   /* 95 */	0,		0,		0,
   /* 96 */	0,		0,		0,
